--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     ,"svg-to-png": "0.2.0"
     ,"lodash-node": "2.4.1"
     ,"shelljs": "~0.2.5"
-    ,"grunt-hub": "0.6.2"
+    ,"fs-extra": "0.15.0"
   },
   "peerDependencies": {
     "grunt": "0.4.5"
