--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-badass",
   "description": "Use SVG elements on modern browsers with sprite fallback for IE8, just using CSS classes and some conditional JS polyfilling",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "homepage": "https://github.com/jimdoyle82/grunt-badass",
   "author": {
     "name": "Jim Doyle",
@@ -27,24 +27,22 @@
   "scripts": {
     "test": "grunt test"
   },
+  "dependencies": {
+    "svgo": "~0.4.1"
+    ,"svg-to-png": "0.2.0"
+    ,"lodash-node": "2.4.1"
+    ,"spritesmith": "1.0.3"
+    ,"fs-extra": "0.15.0"
+    ,"grunt-svgstore": "0.2.7"
+  },
   "devDependencies": {
     "grunt": "0.4.5"
     ,"grunt-contrib-jshint": "~0.2.0"
     ,"grunt-jasmine-node-coverage": "0.3.1"
-    ,"gruntmock": "0.1.1"
-    ,"grunt-svgmin": "0.4.0"
-    ,"grunt-svgstore": "0.2.7"
     ,"grunt-contrib-copy": "0.5.0"
     ,"grunt-contrib-clean": "0.6.0"
-    ,"svg-to-png": "0.2.0"
-    ,"lodash-node": "2.4.1"
     ,"shelljs": "~0.2.5"
-    ,"fs-extra": "0.15.0"
-    ,"spritesmith": "1.0.3"
     ,"parserlib": "0.2.5"
-  },
-  "peerDependencies": {
-    "grunt": "0.4.5"
   },
   "keywords": [
     "gruntplugin","svg","sprite","polyfill","ie8","fallback"
