--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ,"spritesmith": "1.0.3"
     ,"fs-extra": "0.15.0"
     ,"imagemin": "3.1.0"
+    ,"imagemin-pngquant": "4.0.0"
     ,"grunt-svgstore": "0.2.7"
   },
   "devDependencies": {
